Fixed windows horizontal scroll issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,6 +48,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
   color: var(--text-color);
   background-color: var(--background-color);
   margin: 0;
